# langchain-llm-katas

./: .devstart.yaml  .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/: wow.txt
llmkatas/: __init__.py  hints.py
tests/: about_embeddings.py  about_loaders.py  about_prompts.py  about_splitters.py  about_toolkits.py  about_vector_stores.py  hints.yaml
